{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 228,
  "lineage": "e95eefb2-2135-bcd5-bb7b-032a6117fe9d",
  "resources": [
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group/sg-0614db934fdf23ec7",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0614db934fdf23ec7",
            "ingress": [],
            "name": "karv-cluster-cluster-20240403074012493000000009",
            "name_prefix": "karv-cluster-cluster-",
            "owner_id": "767398096953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "karv-cluster-cluster"
            },
            "tags_all": {
              "Name": "karv-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group/sg-0fe052f8469672ec1",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0fe052f8469672ec1",
            "ingress": [],
            "name": "karv-cluster-node-20240403074012475200000008",
            "name_prefix": "karv-cluster-node-",
            "owner_id": "767398096953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "karv-cluster-node",
              "kubernetes.io/cluster/karv-cluster": "owned"
            },
            "tags_all": {
              "Name": "karv-cluster-node",
              "kubernetes.io/cluster/karv-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-714099874",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0614db934fdf23ec7",
            "security_group_rule_id": "sgr-0abb46664dbf95ede",
            "self": false,
            "source_security_group_id": "sg-0fe052f8469672ec1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1468591121",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fe052f8469672ec1",
            "security_group_rule_id": "sgr-034ad27150299617d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3061080068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe052f8469672ec1",
            "security_group_rule_id": "sgr-0c4399e4079cbe10e",
            "self": false,
            "source_security_group_id": "sg-0614db934fdf23ec7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-351278441",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe052f8469672ec1",
            "security_group_rule_id": "sgr-0db01c2cf1dba45f2",
            "self": false,
            "source_security_group_id": "sg-0614db934fdf23ec7",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3719459583",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe052f8469672ec1",
            "security_group_rule_id": "sgr-0c0596e71d8f086df",
            "self": false,
            "source_security_group_id": "sg-0614db934fdf23ec7",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3471724254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe052f8469672ec1",
            "security_group_rule_id": "sgr-0aa1e0682e20d4d20",
            "self": false,
            "source_security_group_id": "sg-0614db934fdf23ec7",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2857336085",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe052f8469672ec1",
            "security_group_rule_id": "sgr-000300bdf2542abb0",
            "self": false,
            "source_security_group_id": "sg-0614db934fdf23ec7",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1605038138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe052f8469672ec1",
            "security_group_rule_id": "sgr-03b4141b4db240f17",
            "self": false,
            "source_security_group_id": "sg-0614db934fdf23ec7",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2826119591",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe052f8469672ec1",
            "security_group_rule_id": "sgr-022e18e5cdda01fbf",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2365101548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe052f8469672ec1",
            "security_group_rule_id": "sgr-08256d8a2905d7764",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-682046979",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0fe052f8469672ec1",
            "security_group_rule_id": "sgr-06d892755cd1d8c3d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:network-acl/acl-08dc79e54dbc27f60",
            "default_network_acl_id": "acl-08dc79e54dbc27f60",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08dc79e54dbc27f60",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767398096953",
            "subnet_ids": [
              "subnet-0475d7bf6def6141f",
              "subnet-07530c90abd5b5b42",
              "subnet-077b7baae2f97dad7",
              "subnet-097d31ce26fa60af5",
              "subnet-0aaadeeb817af6313",
              "subnet-0d7a40d97ade012aa"
            ],
            "tags": {
              "Name": "karv-eks-vpc-default"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-default"
            },
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:route-table/rtb-07709b96a9e85a3cf",
            "default_route_table_id": "rtb-07709b96a9e85a3cf",
            "id": "rtb-07709b96a9e85a3cf",
            "owner_id": "767398096953",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "karv-eks-vpc-default"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group/sg-074d1d19eccd66cc1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-074d1d19eccd66cc1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767398096953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "karv-eks-vpc-default"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-default"
            },
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d7668528e171e33",
            "domain": "vpc",
            "id": "eipalloc-05d7668528e171e33",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-41-147-250.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.147.250",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "karv-eks-vpc-eu-west-2a"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-eu-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:internet-gateway/igw-032bb97393b9c9599",
            "id": "igw-032bb97393b9c9599",
            "owner_id": "767398096953",
            "tags": {
              "Name": "karv-eks-vpc"
            },
            "tags_all": {
              "Name": "karv-eks-vpc"
            },
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d7668528e171e33",
            "association_id": "eipassoc-0ce95bb2a67864bcb",
            "connectivity_type": "public",
            "id": "nat-0e12b6552947a6d66",
            "network_interface_id": "eni-063e1bbd8f1c1a20f",
            "private_ip": "10.0.4.188",
            "public_ip": "13.41.147.250",
            "subnet_id": "subnet-0aaadeeb817af6313",
            "tags": {
              "Name": "karv-eks-vpc-eu-west-2a"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-eu-west-2a"
            }
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f18de5e44ec8e0941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e12b6552947a6d66",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f18de5e44ec8e094",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-032bb97393b9c9599",
            "id": "r-rtb-0f0cf9e7efc995f111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f0cf9e7efc995f11",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:route-table/rtb-0f18de5e44ec8e094",
            "id": "rtb-0f18de5e44ec8e094",
            "owner_id": "767398096953",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "karv-eks-vpc-private"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:route-table/rtb-0f0cf9e7efc995f11",
            "id": "rtb-0f0cf9e7efc995f11",
            "owner_id": "767398096953",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "karv-eks-vpc-public"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da0116baa018032f",
            "route_table_id": "rtb-0f18de5e44ec8e094",
            "subnet_id": "subnet-0d7a40d97ade012aa"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c130d8d2bd632c8",
            "route_table_id": "rtb-0f18de5e44ec8e094",
            "subnet_id": "subnet-07530c90abd5b5b42"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04480f09d4ceac73c",
            "route_table_id": "rtb-0f18de5e44ec8e094",
            "subnet_id": "subnet-0475d7bf6def6141f"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c7c3d16b6ab85e1",
            "route_table_id": "rtb-0f0cf9e7efc995f11",
            "subnet_id": "subnet-0aaadeeb817af6313"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085c9ba472517ef54",
            "route_table_id": "rtb-0f0cf9e7efc995f11",
            "subnet_id": "subnet-097d31ce26fa60af5"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b050a341724f5bf",
            "route_table_id": "rtb-0f0cf9e7efc995f11",
            "subnet_id": "subnet-077b7baae2f97dad7"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-0d7a40d97ade012aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7a40d97ade012aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karv-eks-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-07530c90abd5b5b42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07530c90abd5b5b42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karv-eks-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-0475d7bf6def6141f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0475d7bf6def6141f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karv-eks-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-0aaadeeb817af6313",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaadeeb817af6313",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karv-eks-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-097d31ce26fa60af5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097d31ce26fa60af5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karv-eks-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-077b7baae2f97dad7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077b7baae2f97dad7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karv-eks-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "karv-eks-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/karv-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bef330a747b0f7fb"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:vpc/vpc-0bef330a747b0f7fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08dc79e54dbc27f60",
            "default_route_table_id": "rtb-07709b96a9e85a3cf",
            "default_security_group_id": "sg-074d1d19eccd66cc1",
            "dhcp_options_id": "dopt-0920cfa0cfa60a5ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bef330a747b0f7fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07709b96a9e85a3cf",
            "owner_id": "767398096953",
            "tags": {
              "Name": "karv-eks-vpc"
            },
            "tags_all": {
              "Name": "karv-eks-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}